--- a/.github/workflows/update-toc.yml
+++ b/.github/workflows/update-toc.yml
@@ -18,8 +18,8 @@ jobs:
           npx markdown-toc -i AWS/developer_associate.md
       - name: Commit changes
         run: |
-          git config --local user.name "github-actions[bot]"
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "Andreas Hechler"
+          git config --local user.email "andreas.hechler@partner.bmw.de"
           git add .
           git commit -m "Update TOCs"
       - name: Push changes
