--- a/.github/workflows/update-toc.yml
+++ b/.github/workflows/update-toc.yml
@@ -8,3 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: technote-space/toc-generator@v4
+        with:
+          TARGET_PATHS: developer_associate.md
+          MAX_HEADER_LEVEL: 2
