--- a/.github/workflows/update-toc.yml
+++ b/.github/workflows/update-toc.yml
@@ -9,5 +9,5 @@ jobs:
     steps:
       - uses: technote-space/toc-generator@v4
         with:
-          TARGET_PATHS: developer_associate.md
+          TARGET_PATHS: AWS/developer_associate.md
           MAX_HEADER_LEVEL: 2
