--- a/.github/workflows/update-toc.yml
+++ b/.github/workflows/update-toc.yml
@@ -9,10 +9,10 @@ jobs:
     steps:
       - uses: technote-space/toc-generator@v4
         with:
-          TARGET_PATHS: kafka.md,
-            AWS/AWS Developer Associate/01_Abbreviations_Infrastructure_IAM.md,
-            AWS/AWS Developer Associate/02_EC2.md,
-            AWS/AWS Developer Associate/03_Security_Groups.md,
+          TARGET_PATHS: kafka.md, \
+            AWS/AWS Developer Associate/01_Abbreviations_Infrastructure_IAM.md, \
+            AWS/AWS Developer Associate/02_EC2.md, \
+            AWS/AWS Developer Associate/03_Security_Groups.md, \
             AWS/AWS Developer Associate/04_Scalability_Availability.md,
             AWS/AWS Developer Associate/05_RDS_Aurora_Elasticache.md,
             AWS/AWS Developer Associate/06_Route_53.md,
