--- a/.github/workflows/update-toc.yml
+++ b/.github/workflows/update-toc.yml
@@ -1,12 +1,20 @@
 name: Update TOC
 
-on: push
+on:
+  push:
+    branches:
+      - main
+
+permissions:
+  contents: write
 
 jobs:
   generateTOC:
     name: TOC Generator
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+
       - uses: technote-space/toc-generator@v4
         with:
           TARGET_PATHS: |
